# agent-handshake-protocol

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
ahp/: __init__.py  __main__.py  cli.py  scaffolders.py
ahp/adapters/: __init__.py  base.py  capability.py  deep_agent.py  dspy_agent.py  errors.py  factory.py  format_agent.py  formats.py  game_modes.py  gateway.py  groups.py  human.py  info_source.py  inviter.py  knowledge_graph.py  langgraph_agent.py  mcp.py  neo4j_kg.py  prompts.py  provisioning.py  react_agent.py  resources.py  skill_registry.py  storage.py  teacher_agent.py  tool_address.py  tool_registry.py
ahp/audit/: __init__.py  cloudwatch.py  event.py  sinks.py
ahp/broker/: __init__.py  broker.py  compute_registry.py  router.py  server_registry.py  surveys.py
ahp/core/: __init__.py  address.py  codes.py  compatibility.py  message.py  pattern.py
ahp/demo/: __init__.py  finance_analysis.py  finance_react.py  serve.py
ahp/economy/: __init__.py  agent_banker.py  compute_provider.py  pricing.py  reputation.py  tiers.py  wallet.py
ahp/engine/: __init__.py  errors.py  router.py  scope.py  thread_manager.py
ahp/llm/: __init__.py  bedrock.py  openrouter.py  recipe.py
ahp/registry/: __init__.py  auth.py  registry.py
ahp/serve/: __init__.py
ahp/tools/: __init__.py  research.py
ahp/transport/: __init__.py  cache.py  keys.py  redis_bus.py
docs/: AHP-introduction.md
examples/fastapi_serve/: README.md  app.py  requirements.txt  server.py
examples/federation/: README.md  node_a.py  node_b.py  requirements.txt  shared.py  start.sh
examples/knowledge_graph/: README.md  bootstrap_vectors.cypher  docker-compose.neo4j.yml  teacher_demo.py
examples/knowledge_graph/terraform/: main.tf  outputs.tf  user_data.sh  variables.tf
examples/viewer/: Dockerfile  README.md  RECORDING.md  app.py  expose-on-lan.ps1  requirements.txt  runner.py
examples/viewer/templates/: audit.html  base.html  debate.html  economy.html  runs.html
tests/: conftest.py  test_address.py  test_agent_base.py  test_agentmeta_reputation.py  test_audit.py  test_audit_redis_stream.py  test_auth.py  test_broker_health_proof.py  test_broker_router.py  test_broker_surveys.py  test_cache.py  test_capability.py  test_cli.py  test_cli_audit_tail.py  test_cli_scaffolders.py  test_cli_surveys.py  test_cli_tap_send_describe.py  test_codes.py  test_compatibility.py  test_deep_agent.py  test_demo.py  test_demo_react.py  test_dspy_agent.py  test_economy_agent_banker.py  test_economy_compute_provider.py  test_economy_pricing.py  test_economy_reputation.py  test_economy_wallet.py  test_engine.py  test_engine_with_broker.py  test_factory.py  test_factory_invite.py  test_factory_registries.py  test_federation.py  test_format_taxonomy.py  test_formats.py  test_gateway_agents.py  test_groups.py  test_human_agent.py  test_info_sources.py  (+30 more)
