[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ahp"
version = "0.5.0"
description = "Agentic Handshake Protocol — addressable, format-aware messaging between heterogeneous agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AHP Contributors" }]
dependencies = []

[project.optional-dependencies]
redis = ["redis>=5.0"]
langgraph = ["langgraph>=0.2"]
dspy = ["dspy-ai>=2.4"]
test = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "hypothesis>=6",
    "fakeredis>=2.20",
    "redis>=5.0",
    "langgraph>=0.2",
    "dspy-ai>=2.4",
]

[tool.setuptools.packages.find]
include = ["ahp*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
