[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ahp"
version = "0.24.0"
description = "Agentic Handshake Protocol — addressable, format-aware messaging between heterogeneous agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AHP Contributors" }]
dependencies = []

[project.optional-dependencies]
redis = ["redis>=5.0"]
langgraph = ["langgraph>=1.0"]
dspy = ["dspy-ai>=2.4"]
aws = ["langchain-aws>=0.2", "boto3>=1.34", "python-dotenv>=1.0"]
openrouter = ["langchain-openai>=0.2", "python-dotenv>=1.0"]
deepagents = ["deepagents>=0.6"]
mcp = ["langchain-mcp-adapters>=0.1", "mcp>=1.0"]
# FastAPI is intentionally NOT a library extra. See examples/fastapi_serve/
# for a complete FastAPI consumer of this package.
test = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "hypothesis>=6",
    "fakeredis>=2.20",
    "redis>=5.0",
    "langgraph>=1.0",
    "dspy-ai>=2.4",
    "langchain-aws>=0.2",
    "langchain-openai>=0.2",
    "boto3>=1.34",
    "python-dotenv>=1.0",
    "deepagents>=0.6",
    "langchain>=1.0",
    "langchain-mcp-adapters>=0.1",
    "mcp>=1.0",
]

[tool.setuptools.packages.find]
include = ["ahp*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
