[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ahp"
version = "0.34.0"
description = "Agentic Handshake Protocol — addressable, format-aware messaging between heterogeneous agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "AHP Contributors" }]
dependencies = [
    # LangGraph + LangChain became base deps in Phase 34 (the format
    # taxonomy). The Format dataclass carries optional LangGraph
    # graph builders, and FormatAgent uses LangGraph's Checkpointer
    # protocol for per-(thread, format) state. The protocol layer
    # itself doesn't import LangGraph (ahp.core stays zero-dep), but
    # the adapters layer does. Pinning here so consumers don't have
    # to remember the [langgraph] extra.
    "langgraph>=1.0",
    "langchain>=1.0",
    "langgraph-checkpoint-redis>=0.4",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
# Kept for backwards compat with any documentation pointing at
# ``ahp[langgraph]``; the deps are now in base, so installing this
# extra is a no-op.
langgraph = ["langgraph>=1.0", "langchain>=1.0"]
dspy = ["dspy-ai>=2.4"]
aws = ["langchain-aws>=0.2", "boto3>=1.34", "python-dotenv>=1.0"]
openrouter = ["langchain-openai>=0.2", "python-dotenv>=1.0"]
deepagents = ["deepagents>=0.6"]
mcp = ["langchain-mcp-adapters>=0.1", "mcp>=1.0"]
kg = ["neo4j>=5.13"]
# FastAPI is intentionally NOT a library extra. See examples/fastapi_serve/
# for a complete FastAPI consumer of this package.
test = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "hypothesis>=6",
    "fakeredis>=2.20",
    "redis>=5.0",
    "langgraph>=1.0",
    "langgraph-checkpoint-redis>=0.4",
    "dspy-ai>=2.4",
    "langchain-aws>=0.2",
    "langchain-openai>=0.2",
    "boto3>=1.34",
    "python-dotenv>=1.0",
    "deepagents>=0.6",
    "langchain>=1.0",
    "langchain-mcp-adapters>=0.1",
    "mcp>=1.0",
    "neo4j>=5.13",
]

[tool.setuptools.packages.find]
include = ["ahp*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
